Berry Medley and Candles

--- a/src/main/resources/assets/bbr2/lang/en_us.json
+++ b/src/main/resources/assets/bbr2/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "itemGroup.bbr2.items": "Berry Bush Reborn 2: Items",
 
+  "item.bbr2.berry_medley": "Berry Medley",
+
   "item.bbr2.blackberries": "Blackberries",
   "item.bbr2.blueberries": "Blueberries",
   "item.bbr2.candleberries": "Candleberries",
